pkg/kgateway/setup/testdata/experimental/cors-trafficpolicy-gw-out.yaml
clusters:
- commonLbConfig:
    localityWeightedLbConfig: {}
  connectTimeout: 5s
  edsClusterConfig:
    edsConfig:
      ads: {}
      resourceApiVersion: V3
  ignoreHealthOnHostRemoval: true
  name: kube_default_kubernetes_443
  type: EDS
- commonLbConfig:
    localityWeightedLbConfig: {}
  connectTimeout: 5s
  edsClusterConfig:
    edsConfig:
      ads: {}
      resourceApiVersion: V3
  ignoreHealthOnHostRemoval: true
  name: kube_gwtest_reviews_8080
  type: EDS
endpoints:
- clusterName: kube_gwtest_reviews_8080
  endpoints:
  - lbEndpoints:
    - endpoint:
        address:
          socketAddress:
            address: 10.244.1.11
            portValue: 8080
      loadBalancingWeight: 1
    loadBalancingWeight: 1
    locality: {}
listeners:
- address:
    socketAddress:
      address: '::'
      ipv4Compat: true
      portValue: 8080
  filterChains:
  - filters:
    - name: envoy.filters.network.http_connection_manager
      typedConfig:
        '@type': type.googleapis.com/envoy.extensions.filters.network.http_connection_manager.v3.HttpConnectionManager
        httpFilters:
        - disabled: true
          name: envoy.filters.http.cors
          typedConfig:
            '@type': type.googleapis.com/envoy.extensions.filters.http.cors.v3.Cors
        - name: envoy.filters.http.router
          typedConfig:
            '@type': type.googleapis.com/envoy.extensions.filters.http.router.v3.Router
        mergeSlashes: true
        normalizePath: true
        rds:
          configSource:
            ads: {}
            resourceApiVersion: V3
          routeConfigName: listener~8080
        statPrefix: http
        useRemoteAddress: true
    name: listener~8080
  metadata:
    filterMetadata:
      merge.TrafficPolicy.gateway.kgateway.dev:
        cors:
        - gateway.kgateway.dev/TrafficPolicy/gwtest/my-route-policy
  name: listener~8080
routes:
- ignorePortInHostMatching: true
  metadata:
    filterMetadata:
      merge.TrafficPolicy.gateway.kgateway.dev:
        cors:
        - gateway.kgateway.dev/TrafficPolicy/gwtest/my-route-policy
  name: listener~8080
  typedPerFilterConfig:
    envoy.filters.http.cors:
      '@type': type.googleapis.com/envoy.extensions.filters.http.cors.v3.CorsPolicy
      allowHeaders: Content-Type, Authorization
      allowMethods: GET, POST
      allowOriginStringMatch:
      - exact: https://example.com
      exposeHeaders: X-Custom-Header
      forwardNotMatchingPreflights: false
      maxAge: "86400"
  virtualHosts:
  - domains:
    - www.example.com
    name: listener~8080~www_example_com
    routes:
    - match:
        pathSeparatedPrefix: /cors-disabled
      metadata:
        filterMetadata:
          merge.TrafficPolicy.gateway.kgateway.dev:
            cors:
            - gateway.kgateway.dev/TrafficPolicy/gwtest/disable-cors
      name: listener~8080~www_example_com-route-0-httproute-my-route-gwtest-1-0-rule1-matcher-0
      route:
        cluster: kube_gwtest_reviews_8080
        clusterNotFoundResponseCode: INTERNAL_SERVER_ERROR
      typedPerFilterConfig:
        envoy.filters.http.cors:
          '@type': type.googleapis.com/envoy.extensions.filters.http.cors.v3.CorsPolicy
          filterEnabled:
            defaultValue: {}
            runtimeKey: envoy.cors.filter_enabled
    - match:
        prefix: /
      name: listener~8080~www_example_com-route-1-httproute-my-route-gwtest-0-0-rule0-matcher-0
      route:
        cluster: kube_gwtest_reviews_8080
        clusterNotFoundResponseCode: INTERNAL_SERVER_ERROR
